client/Client.cc: add feature to reconnect client after MDS reset

Client.cc marks session as stale instead of reconecting after received
reset from MDS. On MDS side session is closed so MDS is ignoring cap
renew. This adds option to reconnect stale client sessions instead of
just marking sessions stale.

Fixes: http://tracker.ceph.com/issues/18757

Signed-off-by: Henrik Korkuc <henrik@kirneh.eu>
(cherry picked from commit e0bbc704676ef4aed510daff075ef63c9e73b7b3)